--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+
+    compile 'com.alibaba:fastjson:1.1.51.android'
+    compile files('libs/android-support-v4.jar')
+    compile files('libs/showapi_sdk.jar')
+   // compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
     testCompile 'junit:junit:4.12'
 }
 
