--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".Navigation"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".Attaction"
+            android:exported="true">
+        </activity>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="9rR1pAfON19RvAqP8BDhGOMGfgMpA5GF"/>
